xfsprogs-2.6.28 (30 March 2005)
	- Fix compiler warning in repair/dir.c size checks.
	- Fix more compilation problem with version 4 of gcc
	  (thanks to Andreas Jochens).
	- Make xfs_db and xfs_repair cope with filesystems that
	  have project quota enabled.

xfsprogs-2.6.27 (23 March 2005)
	- Fix default mkfs allocation group size calculations
	  for filesystem sizes in the range 32 - 64 terabytes.
	- Add noalign mkfs suboptions for -d/-r to disable the
	  sunit/swidth auto-alignment (based on logical volume
	  geometry, extracted from the driver).

xfsprogs-2.6.26 (08 March 2005)
	- Fix compilation problem with version 4 of gcc
	  (thanks to Andreas Jochens).
	- Added a streamlined <xfs/xfs.h> for programs wanting
	  to make use of the XFS-specific kernel interfaces (to
	  address complaints that <xfs/libxfs.h> was "heavy").
	- Add imap as an expert command in xfs_io, making it
	  more easily accessible to those who need it.
	- Extended statistics reporting for xfs_io command.
	- Fixed readline support for current distributions.
	- Add an --enable-termcap=[yes/no] configure option,
	  and changed --enable-readline=[yes/no] to not force
	  linking with libtermcap.  Builds on some platforms
	  may need to use both options, but most distributions
	  do not require --enable-termcap when linking against
	  libreadline.
	- Minor man page updates.

xfsprogs-2.6.25 (08 October 2004)
	- Fix build with really old glibc versions.

xfsprogs-2.6.24 (29 September 2004)
	- Allow 'e' suffix in size arguments to mkfs.
	- Update mkfs man page description of maximum allocation
	  group size.
	- Update mkfs and xfs_db man pages to use consistent,
	  standard notations.
	- Sync up user/kernel source in libxfs and headers.

xfsprogs-2.6.23 (17 September 2004)
	- Fix xfs_io pread/pwrite -b option, when used more than
	  once we would use the largest of the previous values,
	  instead of the (possibly smaller) value specified.
	- Add recursive modes to lsattr/chattr xfs_io commands.